// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal handles onClick close modal 1`] = `
<div
  class="overlay"
  data-testid="overlay"
>
  <div
    class="modal-container"
    data-testid="modalContainer"
  >
    <div
      class="modal-window"
    >
      <section
        class="modal-content"
      >
        <h2
          data-testid="modalHeader"
        >
          An error has occurred
        </h2>
        <p
          data-testid="modalContent"
        >
          Content
        </p>
      </section>
      <section
        class="modal-buttons"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-1vtf12y ant-btn-default"
          type="button"
        >
          <span>
            Ok
          </span>
        </button>
        <button
          class="ant-btn css-dev-only-do-not-override-1vtf12y ant-btn-default"
          type="button"
        >
          <span>
            Return to edit
          </span>
        </button>
      </section>
    </div>
  </div>
</div>
`;

exports[`Modal handles onClick close modal and edit 1`] = `
<div
  class="overlay"
  data-testid="overlay"
>
  <div
    class="modal-container"
    data-testid="modalContainer"
  >
    <div
      class="modal-window"
    >
      <section
        class="modal-content"
      >
        <h2
          data-testid="modalHeader"
        >
          An error has occurred
        </h2>
        <p
          data-testid="modalContent"
        >
          Content
        </p>
      </section>
      <section
        class="modal-buttons"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-1vtf12y ant-btn-default"
          type="button"
        >
          <span>
            Ok
          </span>
        </button>
        <button
          class="ant-btn css-dev-only-do-not-override-1vtf12y ant-btn-default"
          type="button"
        >
          <span>
            Return to edit
          </span>
        </button>
      </section>
    </div>
  </div>
</div>
`;

exports[`Modal renders correctly 1`] = `
<div
  class="overlay show"
  data-testid="overlay"
>
  <div
    class="modal-container"
    data-testid="modalContainer"
  >
    <div
      class="modal-window"
    >
      <section
        class="modal-content"
      >
        <h2
          data-testid="modalHeader"
        >
          An error has occurred
        </h2>
        <p
          data-testid="modalContent"
        >
          Content
        </p>
      </section>
      <section
        class="modal-buttons"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-1vtf12y ant-btn-default"
          type="button"
        >
          <span>
            Ok
          </span>
        </button>
        <button
          class="ant-btn css-dev-only-do-not-override-1vtf12y ant-btn-default"
          type="button"
        >
          <span>
            Return to edit
          </span>
        </button>
      </section>
    </div>
  </div>
</div>
`;
